<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FakerDetecter</string>
    <string name="text">test</string>
    <string name="title">Detect the Faker</string>
    <string name="context_menu">Context menu</string>
    <string name="account">请输入账号</string>>
    <string name="password">请输入密码</string>>
    <string name="check_password">记住密码</string>
    <string name="check_login">自动登录</string>
    <string name="login">登录</string>
    <string name="upload">UPLOAD</string>

</resources>
